<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_baseline_videogame_asset_24"
            android:title="@string/menu_home" />



        <item
            android:id="@+id/navigation_dashboard"
            android:icon="@drawable/ic_baseline_send_24"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/navigation_notifications"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_slideshow" />


    </group>

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/fragment_puntua_app"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/puntua_app" />

        <item
            android:id="@+id/fragment_licencias"
            android:icon="@drawable/ic_sharp_library_books_24"
            android:title="@string/licencias" />

        <item
            android:id="@+id/politica_privacidad"
            android:icon="@drawable/ic_baseline_policy_2400"
            android:title="@string/politica_privacidad" />

        <item
            android:id="@+id/fragment_acerca"
            android:icon="@drawable/ic_baseline_list_alt_240"
            android:title="@string/acerca" />

    </group>

</menu>