<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_baseline_videogame_asset_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/navigation_items"
            android:icon="@drawable/ic_baseline_wine_bar_24"
            android:title="@string/items" />

        <item
            android:id="@+id/navigation_dashboard"
            android:icon="@drawable/ic_baseline_send_24"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/navigation_notifications"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_slideshow" />

    </group>
</menu>