<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.FragmentAcerca">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline71"
        app:layout_constraintStart_toStartOf="@+id/guideline70">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:text="@string/polica_parrafo1" />

            <TextView
                android:id="@+id/link_p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/link"
                android:textColor="#3F51B5" />

            <TextView
                android:id="@+id/texto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="false"
                android:text="@string/politica"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline71"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.94" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline73"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

</androidx.constraintlayout.widget.ConstraintLayout>