<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sasas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Activities.Items_targetas">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_height="180dp"
                    android:layout_weight="0.05"
                    android:orientation="vertical" android:layout_width="0dp">

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/cv1"
                    android:layout_width="0dp"
                    android:layout_height="180dp"

                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="0.30"
                    android:background="@drawable/shape_verde"
                    android:orientation="vertical"
                    tools:ignore="MissingConstraints">

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="6dp"
                        android:fontFamily="sans-serif-condensed-light"
                        android:gravity="center|top"
                        android:text="@string/bandita" />

                    <ImageView
                        android:id="@+id/img1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/locked" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/cv2"
                    android:layout_width="0dp"
                    android:layout_height="180dp"

                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.30"
                    android:background="@drawable/shape_verde"
                    android:orientation="vertical"
                    tools:ignore="MissingConstraints">

                    <TextView
                        android:id="@+id/textVie9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="6dp"

                        android:fontFamily="sans-serif-condensed-light"
                        android:gravity="center|top"
                        android:text="@string/alcohol" />

                    <ImageView
                        android:id="@+id/img2"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/locked" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/cv3"
                    android:layout_width="0dp"
                    android:layout_height="180dp"

                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="0.30"
                    android:background="@drawable/shape_verde"
                    android:orientation="vertical"
                    tools:ignore="MissingConstraints">


                    <TextView
                        android:id="@+id/textVie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="6dp"

                        android:fontFamily="sans-serif-condensed-light"
                        android:gravity="center|top"
                        android:text="@string/estetoscopio" />

                    <ImageView
                        android:id="@+id/img3"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/locked" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/ad"
                    android:layout_height="180dp"
                    android:layout_weight="0.05"
                    android:orientation="vertical"
                    android:layout_width="0dp">

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_weight="0.05"
                    android:orientation="vertical">

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/cv4"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="0.30"
                    android:background="@drawable/shape_verde"
                    android:orientation="vertical">

                    android:layout_marginRight="10dp"

                    android:layout_weight="0.30"
                    android:background="@drawable/shape_verde"
                    android:orientation="vertical"
                    tools:ignore="MissingConstraints">

                    <TextView
                        android:id="@+id/textView26"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:gravity="center|top"
                        android:text="@string/inyeccion" />

                    <ImageView

                        android:id="@+id/img4"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/locked" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/cv5"

                    android:layout_width="0dp"
                    android:layout_height="180dp"

                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.30"
                    android:background="@drawable/shape_verde"
                    android:orientation="vertical"
                    tools:ignore="MissingConstraints">

                    <TextView
                        android:id="@+id/textView28"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:gravity="center|top"
                        android:text="@string/microscopio" />


                    <ImageView
                        android:id="@+id/img5"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/locked" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/cv6"
                    android:layout_width="0dp"
                    android:layout_height="181dp"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="0.30"
                    android:background="@drawable/shape_verde"
                    android:orientation="vertical">

                    android:layout_gravity="center_horizontal"

                    android:layout_marginLeft="15dp"
                    android:layout_weight="0.30"
                    android:background="@drawable/shape_verde"
                    android:orientation="vertical"
                    tools:ignore="MissingConstraints">

                    <TextView
                        android:id="@+id/iew9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="6dp"

                        android:fontFamily="sans-serif-condensed-light"
                        android:gravity="center|top"
                        android:text="@string/pastilla" />


                    <ImageView
                        android:id="@+id/img6"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/locked" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/asd"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_weight="0.05"
                    android:orientation="vertical">

                    android:layout_height="180dp"
                    android:layout_weight="0.05"
                    android:orientation="vertical">
                </LinearLayout>
            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_weight="0.05"
                    android:orientation="vertical">

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/cv7"
                    android:layout_height="180dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="5dp"

                    android:layout_weight="0.35"
                    android:background="@drawable/shape_verde"
                    android:orientation="vertical"
                    tools:ignore="MissingConstraints"
                    android:layout_width="0dp">

                    <TextView
                        android:id="@+id/textViewh29"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"

                        android:gravity="center|top"
                        android:text="@string/pildora" />


                    <ImageView
                        android:id="@+id/img7"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/locked" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/cv8"
                    android:layout_height="180dp"
                    android:layout_gravity="center_horizontal"

                    android:layout_marginLeft="10dp"

                    android:layout_weight="0.35"
                    android:background="@drawable/shape_verde"
                    android:orientation="vertical"
                    tools:ignore="MissingConstraints"
                    android:layout_width="0dp">

                    <TextView
                        android:id="@+id/textView30"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:gravity="center|top"

                        android:text="@string/plasma" />


                    <ImageView
                        android:id="@+id/img8"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/locked" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/cv9"
                    android:layout_height="180dp"
                    android:layout_gravity="center_horizontal"

                    android:layout_marginLeft="15dp"
                    android:layout_weight="0.35"
                    android:background="@drawable/shape_verde"
                    android:orientation="vertical"
                    tools:ignore="MissingConstraints"
                    android:layout_width="0dp">

                    <TextView
                        android:id="@+id/textViewm9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="6dp"
                        android:fontFamily="sans-serif-condensed-light"
                        android:gravity="center|top"
                        android:text="@string/sangre" />

                    <ImageView
                        android:id="@+id/img9"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/locked" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_weight="0.05"
                    android:orientation="vertical">

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="3dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="vertical"></LinearLayout>


        </LinearLayout>

    </ScrollView>


</LinearLayout>